Adición de información al manejo de los datos personales.

--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -56,6 +56,17 @@
                             a través de este formulario serán tratados de manera segura y confiable de acuerdo
                             con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
                         {% endblocktrans %}
+                        <p>
+                            {% blocktrans %}
+                                En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
+                                datos por
+                                favor
+                                envíe su solicitud al correo:  protecciondatos@odecopack.com , o comuníquese
+                                al
+                                teléfono:
+                                4856565
+                            {% endblocktrans %}
+                        </p>
                     </div>
 
                     <div class="text-center mt-1-half">
