--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -87,6 +87,14 @@
                                         acuerdo
                                         con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.
                                     {% endblocktrans %}
+                                    <p>
+                                        {% blocktrans %}
+                                            En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
+                                            datos por favor envíe su solicitud al correo:  protecciondatos@odecopack.com
+                                            , o comuníquese al
+                                            teléfono: 4856565
+                                        {% endblocktrans %}
+                                    </p>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="center-on-small-only">
