POLITICA DE TRATAMIENTO DE DATOS PERSONALES

--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -67,6 +67,9 @@
                                 4856565
                             {% endblocktrans %}
                         </p>
+                        <div class="text-center">
+                            <a target="_blank" href="{% url 'web:tratamiento_datos_personales' %}">VER POLITICA DE TRATAMIENTO DE DATOS PERSONALES</a>
+                        </div>
                     </div>
 
                     <div class="text-center mt-1-half">
