--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -90,11 +90,16 @@
                                     <p>
                                         {% blocktrans %}
                                             En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de
-                                            datos por favor envíe su solicitud al correo:  protecciondatos@odecopack.com
+                                            datos por favor envíe su solicitud al correo: protecciondatos@odecopack.com
                                             , o comuníquese al
                                             teléfono: 4856565
                                         {% endblocktrans %}
                                     </p>
+                                    <div class="text-center">
+                                        <a target="_blank" href="{% url 'web:tratamiento_datos_personales' %}">
+                                            VER POLITICA DE TRATAMIENTO DE DATOS PERSONALES
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="center-on-small-only">
