--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -73,7 +73,10 @@
                                 TRATAMIENTO DE DATOS PERSONALES</a>
                         </div>
                     </div>
-                    <div class="g-recaptcha" data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
+                    <div class="col-12">
+                        <div class="g-recaptcha"
+                             data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
+                    </div>
 
                     <div class="text-center mt-1-half">
                         <button type="submit" class="btn mb-2 color-1-odecopack">{% trans 'Enviar' %} <i
