--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -102,7 +102,10 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="g-recaptcha" data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
+                                <div class="col-12 center">
+                                    <div class="g-recaptcha"
+                                         data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
+                                </div>
                                 <div class="col-md-12">
                                     <div class="center-on-small-only">
                                         <button type="submit"
