--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -19,7 +19,8 @@
                                     {% endif %}
 
                                 <div class="col-4 col-sm-3 flex-center">
-                                    <img src="{{ cliente.logo.url }}" alt="{{ cliente.nombre }} es cliente de Odecopack"
+                                    <img data-src="{{ cliente.logo.url }}"
+                                         alt="{{ cliente.nombre }} es cliente de Odecopack"
                                          class="img-fluid">
                                 </div>
 
