--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -157,6 +157,7 @@
         }
         var imgDefer = document.getElementsByTagName('img');
         for (var i = 0; i < imgDefer.length; i++) {
+            print(imgDefer[i])
             if (imgDefer[i].getAttribute('data-src')) {
                 imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
             }
