--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -453,7 +453,7 @@ hr {
   color: #fff !important;
 }
 .formulario .texto-legal {
-  font-size: 0.7rem;
+  font-size: 12px;
 }
 .formulario input,
 .formulario textarea {
