--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -35,7 +35,7 @@
                         <div class="col-12 col-md-6 wow fadeIn">
                             <figure class="flex-center">
                                 {% if index_configuracion.overlay_url %}<a
-                                    href="{{ index_configuracion.overlay_url }}" target="_blank" {% endif %}>
+                                    href="{{ index_configuracion.overlay_url }}" rel="noopener" target="_blank" {% endif %}>
                                     <img class="img-fluid" src="{{ index_configuracion.overlay_publicidad.url }}"
                                          alt="">
                                     {% if index_configuracion.overlay_url %}
