--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -345,7 +345,7 @@ hr
 
 .formulario
   .texto-legal
-    font-size 0.7rem
+    font-size 12px
   input,
   textarea
     padding-left 10px !important
