--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -48,31 +48,33 @@
             <ul class="navbar-nav nav-flex-icons">
                 {% if general_configuracion.facebook %}
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="{{ general_configuracion.facebook }}"><i
+                        <a class="nav-link" rel="noopener" target="_blank"
+                           href="{{ general_configuracion.facebook }}"><i
                                 class="fa fa-facebook"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.linkedin %}
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="{{ general_configuracion.linkedin }}"><i
+                        <a class="nav-link" rel="noopener" target="_blank"
+                           href="{{ general_configuracion.linkedin }}"><i
                                 class="fa fa-linkedin"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.twitter %}
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="{{ general_configuracion.twitter }}"><i
+                        <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.twitter }}"><i
                                 class="fa fa-twitter"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.youtube %}
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="{{ general_configuracion.youtube }}"><i
+                        <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.youtube }}"><i
                                 class="fa fa-youtube-play"></i></a>
                     </li>
                 {% endif %}
                 {% if general_configuracion.instagram %}
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="{{ general_configuracion.instagram }}"><i
+                        <a class="nav-link" rel="noopener" target="_blank" href="{{ general_configuracion.instagram }}"><i
                                 class="fa fa-instagram"></i></a>
                     </li>
                 {% endif %}
